2012-12-06  Jason Merrill  <jason@redhat.com>

	PR c++/55564
	* pt.c (unify) [ARRAY_TYPE]: Unify the element type before the bounds.

2012-12-03  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54170
	* cvt.c (cp_convert_to_pointer): Don't discard side-effects from
	expressions of nullptr_t.
	* typeck.c (build_ptrmemfunc): Likewise.

2012-12-01  Jakub Jelinek  <jakub@redhat.com>

	PR c++/55542
	* pt.c (make_ith_pack_parameter_name): Return NULL if
	name is NULL.
	(tsubst_decl): Call make_ith_pack_parameter_name even if
	DECL_NAME is NULL.

2012-11-29  Jason Merrill  <jason@redhat.com>

	PR c++/53137
	* pt.c (tsubst_expr) [DECL_EXPR]: Set LAMBDA_EXPR_THIS_CAPTURE here.
	(tsubst_copy_and_build) [LAMBDA_EXPR]: And clear it here.
	(instantiate_class_template_1): Not here.

2012-11-29  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/53094
	* cvt.c (ocp_convert): Call convert_to_vector.

2012-11-29  Kai Tietz  <ktietz@redhat.com>

	PR target/53912
	* class.c (dump_class_hierarchy_r): Cast from pointer via uintptr_t.
	(dump_vtable): Likewise.

2012-11-29  Ed Smith-Rowland  <3dw4rd@verizon.net>

	PR c++/52654
	* parser.c (cp_parser_string_literal): Add overflow_type arg.
	(cp_parser_userdef_numeric_literal): Warn on numeric overflow.

2012-11-28  Andrew Pinski  <apinski@cavium.com>

	PR bootstrap/54279
	* Make-lang.in (g++$(exeext)): Rename to
	(xg++$(exeext)): This.
	(g++-cross$(exeext)): Use xg++$(exeext) instead of g++$(exeext).
	(c++.start.encap): Likewise.
	(c++.install-common): Likewise.

2012-11-24  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/55446
	* init.c (build_vec_init): Do not early return error_mark_mode
	when integer_all_onesp (maxindex).

2012-11-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/54046
	* cp-objcp-common.h (LANG_HOOKS_BLOCK_MAY_FALLTHRU): Redefine.
	* cp-objcp-common.c (cxx_block_may_fallthru): New function.
	* cp-tree.h (cxx_block_may_fallthru): New prototype.

2012-11-23  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR c++/55418